ci: java opts 해결